Fix spacing and JS issues

--- a/resources/assets/sass/admin.scss
+++ b/resources/assets/sass/admin.scss
@@ -288,6 +288,7 @@ code {
   }
 }
 
-.form-group {
+.form-group,
+.clipboard-btn {
   margin-bottom: 15px;
 }
